--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,12 +24,15 @@ play.i18n.langs = [ "en" ]
 # By convention, the default datasource is named `default`
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://api.template-java.com:3306/play"
+db.default.url="jdbc:mysql://localhost:3306/openshop"
 db.default.username=root
 db.default.password=""
 db.default.logStatements=true
 db.default.jndiName=DefaultDS
 jpa.default=mySqlPersistenceUnit
+
+
+ebean.default = ["models.*"]
 
 # Logger
 # ~~~~~
