--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -26,13 +26,13 @@ play.i18n.langs = [ "en" ]
 //db.default.username=fortune
 //db.default.password="94bd6y0E&C55"
 db.default.url="jdbc:mysql://localhost:3306/openshop"
-db.default.username=root
-db.default.password=""
+db.default.username=user
+db.default.password="pwd"
 
 //db.default.driver=org.postgresql.Driver
 //db.default.url="jdbc:postgresql://localhost:5432/futureshop"
-//db.default.username=futureshop
-//db.default.password="futureshop123"
+//db.default.username=username
+//db.default.password="pwd"
 
 db.default.logStatements=true
 db.default.jndiName=DefaultDS
@@ -58,7 +58,7 @@ logger.application=DEBUG
 logger.com.jolbox=DEBUG
 
 
-server.url = "http://10.65.50.221:9000"
+server.url = "http://ip:port"
 
 play.evolutions.enabled = true
 
@@ -68,8 +68,8 @@ play.mailer {
   host="email-smtp.us-east-1.amazonaws.com" #example:
   port="587" #example: 465
   ssl=no
-  user="AKIAIJISR6UE72MCTFMA"
-  password="AsxEmQrfYn8mYgaxS5nDROYUTOhO7J0kfEUXMQk26c3P"
+  user="user"
+  password="pwd"
   mock=false
 }
 
@@ -77,20 +77,9 @@ play.mailer {
 product.count.per.page = 40
 order.count.per.page = 100
 
-aws.access.key="AKIAIN6UCWVK52QZVO6Q"
-aws.secret.key="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"
-aws.s3.bucket="fortunestoredxb"
-aws.s3.bucket="fortunestoredev"
+aws.access.key="user"
+aws.secret.key="pwd"
+aws.s3.bucket="bucket-name"
 aws.url = "https://s3.ap-south-1.amazonaws.com/"
 
 parsers.text.maxLength=1024M
-
-//smtp.mock=false
-//smtp {
-//  host="mail.gandi.net" #example:
-//  port="587" #example: 465
-//  ssl=no
-//  user="info@zxer.in"
-//  password="asdf.1234"
-//  from="info@zxer.in"
-//}
